--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,6 +11,7 @@
             <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
             <link href="{{ url_for('static', filename='css/webhooks.css') }}" rel="stylesheet">
             <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+            <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         {% endblock %}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.5/babel.min.js"></script>
     </head>
