--- a/app/templates/security/two_factor_verify_code.html
+++ b/app/templates/security/two_factor_verify_code.html
@@ -34,7 +34,7 @@
           </form>
 
           <div class="mt-3 text-center">
-            <a href="{{ url_for_security('two_factor_rescue') }}">Lost your device?</a>
+            <a href="{{ url_for_security('mf_recovery') }}">Lost your device?</a>
           </div>
         </div>
       </div>
